<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2"
    android:background="@color/black">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="50dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="500dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="40dp">

        <TextView
            android:text="@string/q2"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdo1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/q2a"
                android:layout_margin="15dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rdo1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/q2b"
                android:layout_margin="15dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rdo1c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/q2c"
                android:layout_margin="15dp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/rdo1d"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/q2d"
                android:layout_margin="15dp"/>

        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button1"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="65dp"
        android:text="@string/next"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/btnol"
        android:textColor="@color/white"/>
</LinearLayout>